--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -13,27 +13,101 @@
         android:layout_marginHorizontal="8dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvPermissionNotify"
+        <Switch
+            android:id="@+id/swSMSMonitor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/darker_gray"
-            android:onClick="onPermissionNotifyClick"
-            android:padding="4dp"
-            android:text=""
-            android:textColor="@android:color/white" />
+            android:onClick="OnSwitchSMSMonitor"
+            android:text="@string/sms_monitor" />
 
-        <TextView
-            android:id="@+id/tvAccessibilityNotify"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/split" />
+
+        <Switch
+            android:id="@+id/swCallMonitor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/darker_gray"
-            android:onClick="onAccessibilityNotifyClick"
-            android:padding="4dp"
-            android:text=""
-            android:textColor="@android:color/white" />
+            android:onClick="OnSwitchCallMonitor"
+            android:text="@string/call_monitor" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/split" />
+
+        <Switch
+            android:id="@+id/swNotificationMonitor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="OnSwitchNotificationMonitor"
+            android:text="@string/notification_monitor" />
+
+        <LinearLayout
+            android:id="@+id/grNotificationMonitor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="8dp"
+            android:paddingEnd="0dp">
+
+            <CheckBox
+                android:id="@+id/cbNotificationIgnoreOngoing"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layoutDirection="rtl"
+                android:text="@string/notificationIgnoreOngoing" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/notificationInfoLevel" />
+
+                <SeekBar
+                    android:id="@+id/sbNotificationInfoLevel"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:max="2"
+                    android:progress="0" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/notificationIgnoreList" />
+
+            <EditText
+                android:id="@+id/etNotificationIgnoreList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="start"
+                android:hint="@string/notificationIgnoreList_hint"
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/split" />
 
         <Switch
             android:id="@+id/swDoCopyPin"
@@ -43,19 +117,10 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
-
-        <Switch
-            android:id="@+id/swMissedCall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/missed_call" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_height="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/split" />
 
         <Switch
             android:id="@+id/swDoNotify"
@@ -65,8 +130,10 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_height="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/split" />
 
         <Switch
             android:id="@+id/swDoToast"
@@ -77,7 +144,10 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+
+            android:background="@color/split" />
 
         <Switch
             android:id="@+id/swSendToTelegram"
@@ -87,10 +157,9 @@
             android:text="@string/send_to_telegram" />
 
         <LinearLayout
-            android:id="@+id/groupSendToTelegram"
+            android:id="@+id/grSendToTelegram"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:orientation="vertical"
             android:paddingStart="8dp"
             android:paddingEnd="0dp">
@@ -122,8 +191,10 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_height="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/split" />
 
         <Switch
             android:id="@+id/swSendToServer"
@@ -133,10 +204,9 @@
             android:text="@string/send_to_server" />
 
         <LinearLayout
-            android:id="@+id/groupSendToServer"
+            android:id="@+id/grSendToServer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:orientation="vertical"
             android:paddingStart="8dp"
             android:paddingEnd="0dp">
@@ -165,7 +235,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/split" />
 
         <TextView
             android:layout_width="match_parent"
@@ -175,7 +247,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:orientation="vertical"
             android:paddingStart="8dp"
             android:paddingEnd="0dp">
@@ -203,7 +274,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/split" />
 
         <TextView
             android:layout_width="match_parent"
@@ -213,7 +286,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:orientation="vertical"
             android:paddingStart="8dp"
             android:paddingEnd="0dp">
@@ -235,7 +307,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/split" />
 
         <TextView
             android:layout_width="match_parent"
@@ -245,7 +319,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:orientation="vertical"
             android:paddingStart="8dp"
             android:paddingEnd="0dp">
@@ -263,7 +336,57 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/split" />
+
+        <TextView
+            android:id="@+id/tvPermissionNotify"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/notifyBk"
+            android:onClick="onPermissionNotifyClick"
+            android:padding="4dp"
+            android:text=""
+            android:textColor="@color/notifyFg" />
+
+        <TextView
+            android:id="@+id/tvNotificationNotify"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/notifyBk"
+            android:onClick="onNotificationNotifyClick"
+            android:padding="4dp"
+            android:text=""
+            android:textColor="@color/notifyFg" />
+
+        <TextView
+            android:id="@+id/tvBatteryOptimizationNotify"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/notifyBk"
+            android:onClick="onBatteryOptimizationNotifyClick"
+            android:padding="4dp"
+            android:text=""
+            android:textColor="@color/notifyFg" />
+
+        <TextView
+            android:id="@+id/tvAccessibilityNotify"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/notifyBk"
+            android:onClick="onAccessibilityNotifyClick"
+            android:padding="4dp"
+            android:text=""
+            android:textColor="@color/notifyFg" />
 
         <Button
             android:id="@+id/btnApply"
